--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="All SriLankan Events in one place"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,6 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kiwi Lanka Events</title>
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="Kiwi Lanka Events" />
+    <meta property="og:description" content="Book tickets for Sri Lankan community events in New Zealand." />
+    <meta property="og:image" content="https://kiwilanka.co.nz/logo512.png" />
+    <meta property="og:url" content="https://kiwilanka.co.nz" />
+    <meta property="og:type" content="website" />
+
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
