Add SEO component to various pages and implement structured data for events
- Created a new SEO component to manage meta tags for better SEO.
- Integrated SEO component into About, Contact, EventsList, EventsPage, Food, FoodSelection, Login, Payment, PaymentFailed, PaymentSuccess, and TicketSelection pages.
- Added structured data for events in TicketSelection to enhance search visibility.
- Updated meta descriptions and keywords for improved search engine optimization.

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+  <head>    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="All SriLankan Events in one place"
+      content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking."
     />
+    <meta name="keywords" content="Book NZ Events Easily Online, Find Sri Lankan Events NZ, Secure Your Event Tickets, Instant Ticket Booking, Pay Securely With Stripe, Book Food With Your Ticket, New Zealand Events Hub, Easy Event Ticketing, Browse Local Events Now, Events You'll Love" />
+    <meta name="author" content="KiwiLanka Events" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,11 +27,23 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Kiwi Lanka Events</title>
+    -->    <title>Book NZ Events Easily Online | KiwiLanka Events</title>
 
     <!-- Open Graph (for social sharing) -->
-    <meta property="og:title" content="Kiwi Lanka Events" />
+    <meta property="og:title" content="Book NZ Events Easily Online | KiwiLanka Events" />
+    <meta property="og:description" content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking." />
+    <meta property="og:image" content="%PUBLIC_URL%/kiwilanka-logo-main.png" />
+    <meta property="og:url" content="https://kiwilanka.co.nz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="KiwiLanka Events" />
+    
+    <!-- Twitter Card data -->    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Book NZ Events Easily Online | KiwiLanka Events" />
+    <meta name="twitter:description" content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/kiwilanka-logo-main.png" />
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://kiwilanka.co.nz" />
     <meta property="og:description" content="Book tickets for Sri Lankan community events in New Zealand." />
     <meta property="og:image" content="https://kiwilanka.co.nz/logo512.png" />
     <meta property="og:url" content="https://kiwilanka.co.nz" />
