--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>    <meta charset="utf-8" />
+<html lang="en">  <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17215959436"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17215959436');
+    </script>
+    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -48,8 +57,6 @@
     <meta property="og:image" content="https://kiwilanka.co.nz/logo512.png" />
     <meta property="og:url" content="https://kiwilanka.co.nz" />
     <meta property="og:type" content="website" />
-
-
 
   </head>
   <body>
