feat: Enhance payment flow with legal consent and trust indicators
- Added LegalConsent component to validate user agreement with terms and conditions.
- Integrated TrustIndicators for payment security assurance.
- Updated Payment, PaymentFailed, PaymentSuccess, and PaymentSummary pages to include business information and trust indicators.
- Created new PrivacyPolicy and RefundPolicy pages to provide users with essential legal information.
- Implemented TermsAndConditions page outlining user responsibilities and service terms.
- Adjusted SEO keywords for improved search visibility across registration and payment pages.

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -286,7 +286,7 @@
         <div class="maintenance-icon">🎬</div>
         
         <h1>We'll Be Right Back!</h1>
-        <p class="subtitle">Our event booking platform is currently undergoing scheduled maintenance to provide you with an improved service experience.</p>
+        <p class="subtitle">Our ticketing platform is currently undergoing scheduled maintenance to provide you with an improved service experience.</p>
         
         <div class="progress-bar">
             <div class="progress-fill"></div>
