--- a/public/maintenance-advanced.html
+++ b/public/maintenance-advanced.html
@@ -417,7 +417,7 @@
         <div class="maintenance-icon">🛠️</div>
         
         <h1>We're Making Things Better!</h1>
-        <p class="subtitle">Our event booking platform is temporarily offline while we implement exciting new features and improvements.</p>
+        <p class="subtitle">Our ticketing platform is temporarily offline while we implement exciting new features and improvements.</p>
         
         <div class="progress-section">
             <div class="progress-label">
