feat: Rebrand to KiwiLanka Tickets with updated titles, descriptions, and SEO metadata across the application

--- a/public/index-fallback.html
+++ b/public/index-fallback.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KiwiLanka Events - Emergency Fallback</title>
+    <title>KiwiLanka Tickets - Emergency Fallback</title>
     
     <!-- Emergency SPA routing fallback - No web.config required -->
     <script>
@@ -49,7 +49,7 @@
     <div id="root">
         <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; font-family: Arial, sans-serif;">
             <div style="text-align: center;">
-                <h2>Loading KiwiLanka Events...</h2>
+                <h2>Loading KiwiLanka Tickets...</h2>
                 <p>If this page doesn't load automatically, <a href="/">click here</a>.</p>
             </div>
         </div>
@@ -62,7 +62,7 @@
             if (!window.React) {
                 document.getElementById('root').innerHTML = 
                     '<div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">' +
-                    '<h1>KiwiLanka Events</h1>' +
+                    '<h1>KiwiLanka Tickets</h1>' +
                     '<p>We\'re experiencing technical difficulties. Please try again later.</p>' +
                     '<p><a href="/">Return to Home</a></p>' +
                     '</div>';
