--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Maintenance - KiwiLanka Events</title>
+    <title>Site Maintenance - KiwiLanka Tickets</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     <style>
@@ -280,7 +280,7 @@
 <body>
     <div class="maintenance-container">
         <div class="logo-container">
-            <img src="/KiwiLankaPrimaryLogo.png" alt="KiwiLanka Events" class="logo">
+            <img src="/KiwiLankaPrimaryLogo.png" alt="KiwiLanka Tickets" class="logo">
         </div>
         
         <div class="maintenance-icon">🎬</div>
