--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking."
+      content="Professional ticketing platform for Sri Lankan community events across New Zealand. Secure online ticket sales with Stripe. Instant confirmations and digital tickets."
     />
-    <meta name="keywords" content="Book NZ Events Easily Online, Find Sri Lankan Events NZ, Secure Your Event Tickets, Instant Ticket Booking, Pay Securely With Stripe, Book Food With Your Ticket, New Zealand Events Hub, Easy Event Ticketing, Browse Local Events Now, Events You'll Love" />
-    <meta name="author" content="KiwiLanka Events" />
+    <meta name="keywords" content="Professional Ticketing Platform, Sri Lankan Event Tickets NZ, Secure Ticket Sales, Digital Ticketing Services, Pay Securely With Stripe, Ticket Sales Platform, Professional Event Ticketing, Secure Online Tickets, Event Ticket Solutions, Ticketing Partner" />
+    <meta name="author" content="KiwiLanka Tickets" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
@@ -36,27 +36,23 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->    <title>Book NZ Events Easily Online | KiwiLanka Events</title>
+    -->    <title>Professional Ticketing Platform | KiwiLanka Tickets</title>
 
     <!-- Open Graph (for social sharing) -->
-    <meta property="og:title" content="Book NZ Events Easily Online | KiwiLanka Events" />
-    <meta property="og:description" content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking." />
+    <meta property="og:title" content="Professional Ticketing Platform | KiwiLanka Tickets" />
+    <meta property="og:description" content="Professional ticketing platform for Sri Lankan community events across New Zealand. Secure online ticket sales with Stripe. Instant confirmations and digital tickets." />
     <meta property="og:image" content="%PUBLIC_URL%/kiwilanka-logo-main.png" />
     <meta property="og:url" content="https://kiwilanka.co.nz" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="KiwiLanka Events" />
-    
+    <meta property="og:site_name" content="KiwiLanka Tickets" />
+
     <!-- Twitter Card data -->    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Book NZ Events Easily Online | KiwiLanka Events" />
-    <meta name="twitter:description" content="Discover and book Sri Lankan community events across New Zealand. Pay online with Stripe. Get instant email confirmations after your booking." />
+    <meta name="twitter:title" content="Professional Ticketing Platform | KiwiLanka Tickets" />
+    <meta name="twitter:description" content="Professional ticketing platform for Sri Lankan community events across New Zealand. Secure online ticket sales with Stripe. Instant confirmations and digital tickets." />
     <meta name="twitter:image" content="%PUBLIC_URL%/kiwilanka-logo-main.png" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://kiwilanka.co.nz" />
-    <meta property="og:description" content="Book tickets for Sri Lankan community events in New Zealand." />
-    <meta property="og:image" content="https://kiwilanka.co.nz/logo512.png" />
-    <meta property="og:url" content="https://kiwilanka.co.nz" />
-    <meta property="og:type" content="website" />
 
   </head>
   <body>
