--- a/public/maintenance-advanced.html
+++ b/public/maintenance-advanced.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Under Maintenance - KiwiLanka Events</title>
+    <title>Site Under Maintenance - KiwiLanka Tickets</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     <style>
