feat: Add Google Analytics 4 (G-V9HTB2CSZH) tracking and HTTP to HTTPS redirect
- Added GA4 measurement ID alongside Google Ads tracking (AW-17215959436)
- Implemented automatic HTTP to HTTPS redirect in web.config
- Updated RouteTracker to track both GA4 and Google Ads
- Applied redirect rules to frontend and production configurations

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">  <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17215959436"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V9HTB2CSZH"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
+      gtag('config', 'G-V9HTB2CSZH');
       gtag('config', 'AW-17215959436');
     </script>
     <meta charset="utf-8" />
